--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "vitepress": "^1.6.4",
     "fs-extra": "^11.1.1",
     "path": "^0.12.7",
+    "gray-matter": "4.0.3",
     "@types/node": "^25.3.0"
   },
   "scripts": {
